objects/slackv2__Recent_Channel__c.object
<CustomObject>
    <fields>
        <fullName>slackv2__Channel_Id__c</fullName>
        <label>Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Slack_Auth__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Slack Auth</label>
        <referenceTo>slackv2__Slack_Auth__c</referenceTo>
        <relationshipName>Recent_Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>